--- a/Reports/Project.html
+++ b/Reports/Project.html
@@ -3,128 +3,64 @@
 <head>
 <meta charset="utf-8">
 <title>Reports</title>
-<link rel="stylesheet" type="text/css" href="view.css" media="all">
+<link rel="stylesheet" type="text/css" href="report.css" media="all">
 </head>
 
 <body>
 
 <h1>Project Reports</h1>
 
-<table>
-  <thead>
-    <tr>
-      <td><b>Project ID</b></td>
-      <td><b>Manager ID</b></td>
-      <td><b>First Name</b></td>
-      <td><b>Last Name</b></td>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-  </tbody>
-  <tfoot>
-    <tr>
-      <td>Footer 1</td>
-      <td>Footer 2</td>
-      <td>Footer 3</td>
-      <td>Footer 4</td>
-    </tr>
-  </tfoot>
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for Names...">
+
+<table id="myTable">
+  <tr class="header">
+    <th style="width:40%;">Project ID</th>
+    <th style="width:60%;">Active</th>
+    <th style="width:40%;"></th>
+
+  </tr>
+  <tr>
+    <td>ID1</td>
+    <td>Name1</td>
+    <td><button id="export-btn" class="btn btn-primary">Update</button></td>
+
+  </tr>
+  <tr>
+    <td>ID2</td>
+    <td>Name2</td>
+    <td><button id="export-btn" class="btn btn-primary">Update</button></td>
+  </tr>
+  <tr>
+    <td>ID3</td>
+    <td>Name3</td>
+    <td><button id="export-btn" class="btn btn-primary">Update</button></td>
+  </tr>
+  <tr>
+   <td>ID4</td>
+    <td>Name4</td>
+    <td><button id="export-btn" class="btn btn-primary">Update</button></td>
+  </tr>
 </table>
+
+<script>
+function myFunction() {
+  var input, filter, table, tr, td, i;
+  input = document.getElementById("myInput");
+  filter = input.value.toUpperCase();
+  table = document.getElementById("myTable");
+  tr = table.getElementsByTagName("tr");
+  for (i = 0; i < tr.length; i++) {
+    td = tr[i].getElementsByTagName("td")[1];
+    if (td) {
+      if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
+        tr[i].style.display = "";
+      } else {
+        tr[i].style.display = "none";
+      }
+    }       
+  }
+}
+</script>
+
 </body>
 </html>
