Select Employee, Project, and Company now working

--- a/Reports/Company.html
+++ b/Reports/Company.html
@@ -1,211 +1,53 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Reports</title>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<link rel="stylesheet" type="text/css" href="view.css" media="all">
-=======
-<link rel="stylesheet" type="text/css" href="report.css" media="all">
->>>>>>> 746c17bbbb9b585a7405f158b3633db1b1100344
-=======
-<link rel="stylesheet" type="text/css" href="view.css" media="all">
->>>>>>> parent of 746c17b... reports v2
-=======
-<link rel="stylesheet" type="text/css" href="view.css" media="all">
->>>>>>> parent of 746c17b... reports v2
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Reports</title>
 
-<body>
+    <link rel="stylesheet" type="text/css" href="report.css" media="all">
+  </head>
 
-<h1>Company Reports</h1>
+  <body>
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> parent of 746c17b... reports v2
-=======
->>>>>>> parent of 746c17b... reports v2
-<table>
-  <thead>
-    <tr>
-      <td><b>Company ID</b></td>
-      <td><b>Company Name</b></td>
-      <td><b>Project</b></td>
-      <td><b>Active</b></td>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-  </tbody>
-  <tfoot>
-    <tr>
-      <td>Footer 1</td>
-      <td>Footer 2</td>
-      <td>Footer 3</td>
-      <td>Footer 4</td>
-    </tr>
-  </tfoot>
-<<<<<<< HEAD
-<<<<<<< HEAD
-</table>
-=======
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for Names...">
+    <h1>Company Reports</h1>
+    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for Names...">
 
-<table id="myTable">
-  <tr class="header">
-    <th style="width:40%;">Company ID</th>
-    <th style="width:60%;">Company Name</th>
-    <th style="width:40%;"></th>
+    <table id="myTable">
+      <tr class="header">
+        <th style="width:40%;">Company ID</th>
+        <th style="width:60%;">Company Name</th>
+        <th style="width:40%;"></th>
+      </tr>
 
-  </tr>
-  <tr>
-    <td>ID1</td>
-    <td>Name1</td>
-    <td><button id="export-btn" class="btn btn-primary">Update</button></td>
+      <tr>
+        <td>ID1</td>
+        <td>Name1</td>
+        <td><button id="export-btn" class="btn btn-primary">Update</button></td>
+      </tr>
+    </table>
 
-  </tr>
-  <tr>
-    <td>ID2</td>
-    <td>Name2</td>
-    <td><button id="export-btn" class="btn btn-primary">Update</button></td>
-  </tr>
-  <tr>
-    <td>ID3</td>
-    <td>Name3</td>
-    <td><button id="export-btn" class="btn btn-primary">Update</button></td>
-  </tr>
-  <tr>
-   <td>ID4</td>
-    <td>Name4</td>
-    <td><button id="export-btn" class="btn btn-primary">Update</button></td>
-  </tr>
-</table>
-
-<script>
-function myFunction() {
-  var input, filter, table, tr, td, i;
-  input = document.getElementById("myInput");
-  filter = input.value.toUpperCase();
-  table = document.getElementById("myTable");
-  tr = table.getElementsByTagName("tr");
-  for (i = 0; i < tr.length; i++) {
-    td = tr[i].getElementsByTagName("td")[1];
-    if (td) {
-      if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
-        tr[i].style.display = "";
-      } else {
-        tr[i].style.display = "none";
+    <script>
+    function myFunction() {
+      var input, filter, table, tr, td, i;
+      input = document.getElementById("myInput");
+      filter = input.value.toUpperCase();
+      table = document.getElementById("myTable");
+      tr = table.getElementsByTagName("tr");
+      for (i = 0; i < tr.length; i++) {
+        td = tr[i].getElementsByTagName("td")[1];
+        if (td)
+        {
+          if (td.innerHTML.toUpperCase().indexOf(filter) > -1)
+          {
+            tr[i].style.display = "";
+          }
+          else
+          {
+            tr[i].style.display = "none";
+          }
+        }
       }
-    }       
-  }
-}
-</script>
-
->>>>>>> 746c17bbbb9b585a7405f158b3633db1b1100344
-=======
-</table>
->>>>>>> parent of 746c17b... reports v2
-=======
-</table>
->>>>>>> parent of 746c17b... reports v2
-</body>
+    }
+    </script>
+  </body>
 </html>
