--- a/Reports/Project.html
+++ b/Reports/Project.html
@@ -3,179 +3,78 @@
 <head>
 <meta charset="utf-8">
 <title>Reports</title>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<link rel="stylesheet" type="text/css" href="view.css" media="all">
-=======
-<link rel="stylesheet" type="text/css" href="report.css" media="all">
->>>>>>> 746c17bbbb9b585a7405f158b3633db1b1100344
-=======
-<link rel="stylesheet" type="text/css" href="view.css" media="all">
->>>>>>> parent of 746c17b... reports v2
-=======
-<link rel="stylesheet" type="text/css" href="view.css" media="all">
->>>>>>> parent of 746c17b... reports v2
+<!-- <link rel="stylesheet" type="text/css" href="report.css" media="all">-->
+
+<style>
+* {
+  box-sizing: border-box;
+}
+
+#myInput {
+  background-image: url('/css/searchicon.png');
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
+
+#myTable {
+  border-collapse: collapse;
+  width: 100%;
+  border: 1px solid #ddd;
+  font-size: 18px;
+}
+
+#myTable th, #myTable td {
+  text-align: left;
+  padding: 12px;
+}
+
+#myTable tr {
+  border-bottom: 1px solid #ddd;
+}
+
+#myTable tr.header, #myTable tr:hover {
+  background-color: #f1f1f1;
+}
+</style>
 </head>
 
 <body>
 
-<h1>Project Reports</h1>
+<h1>Projec Reports</h1>
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> parent of 746c17b... reports v2
-=======
->>>>>>> parent of 746c17b... reports v2
-<table>
-  <thead>
-    <tr>
-      <td><b>Project ID</b></td>
-      <td><b>Manager ID</b></td>
-      <td><b>First Name</b></td>
-      <td><b>Last Name</b></td>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-      <tr>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-      <td type="text" name="cell1">Cell content</td>
-    <tr>
-  </tbody>
-  <tfoot>
-    <tr>
-      <td>Footer 1</td>
-      <td>Footer 2</td>
-      <td>Footer 3</td>
-      <td>Footer 4</td>
-    </tr>
-  </tfoot>
-<<<<<<< HEAD
-<<<<<<< HEAD
-</table>
-=======
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for Names...">
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for Project IDs...">
 
 <table id="myTable">
   <tr class="header">
     <th style="width:40%;">Project ID</th>
-    <th style="width:60%;">Active</th>
+    <th style="width:60%;">Project Activity</th>
     <th style="width:40%;"></th>
 
   </tr>
   <tr>
     <td>ID1</td>
-    <td>Name1</td>
+    <td>active1</td>
     <td><button id="export-btn" class="btn btn-primary">Update</button></td>
 
   </tr>
   <tr>
     <td>ID2</td>
-    <td>Name2</td>
+    <td>active2</td>
     <td><button id="export-btn" class="btn btn-primary">Update</button></td>
   </tr>
   <tr>
     <td>ID3</td>
-    <td>Name3</td>
+    <td>active3</td>
     <td><button id="export-btn" class="btn btn-primary">Update</button></td>
   </tr>
   <tr>
    <td>ID4</td>
-    <td>Name4</td>
+    <td>active4</td>
     <td><button id="export-btn" class="btn btn-primary">Update</button></td>
   </tr>
 </table>
@@ -188,7 +87,7 @@ function myFunction() {
   table = document.getElementById("myTable");
   tr = table.getElementsByTagName("tr");
   for (i = 0; i < tr.length; i++) {
-    td = tr[i].getElementsByTagName("td")[1];
+    td = tr[i].getElementsByTagName("td")[0];
     if (td) {
       if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
         tr[i].style.display = "";
@@ -200,12 +99,5 @@ function myFunction() {
 }
 </script>
 
->>>>>>> 746c17bbbb9b585a7405f158b3633db1b1100344
-=======
-</table>
->>>>>>> parent of 746c17b... reports v2
-=======
-</table>
->>>>>>> parent of 746c17b... reports v2
 </body>
 </html>
