--- a/analytics/index.html
+++ b/analytics/index.html
@@ -86,11 +86,11 @@
   <table id="keywords" cellspacing="0" cellpadding="0">
     <thead>
       <tr>
-        <th>Project ID</th>
-        <th>Manager</th>
-        <th>Total Cost</th>
-        <th>Total Time Spent</th>
-        <th>Employee with most hours</th>
+        <th>Employee ID</th>
+        <th>Position</th>
+        <th>Start-Date</th>
+        <th>Salary</th>
+        <th>Avg. Hrs/Week</th>
       </tr>
     </thead>
     <tbody>
